# thorvg-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src_cpp/: main.cpp
