[package]
name = "thorvg-rust"
description = "Rust bindings for Thorvg"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["rinechran <rinechran@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.68.1"